--- a/src/styles/components/filter_form.scss
+++ b/src/styles/components/filter_form.scss
@@ -102,7 +102,8 @@
         border: none;
         border-left: 1px solid var(--color-primary-green);
         @include bg-image;
-        background-position: initial;
+        background-position: center;
+        background-size: 100% 100%;
       }
     }
 
